--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="navigation">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="www.vecna.com.br/aboutUs.html">Sobre nós</a></li>
+          <li><a href="/aboutUs.html">Sobre nós</a></li>
           <li><a href="">Nosso Contato</a></li>
         </ul>
       </header>
