--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="navigation">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="#aboutUs.html">Teste</a></li>
+          <li><a href="aboutUs.html">Teste2</a></li>
           <li><a href="">Nosso Contato</a></li>
         </ul>
       </header>
