--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vecna Brasil</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="img/v title logo.png">
   </head>
 
   <body>
@@ -16,7 +17,7 @@
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="navigation">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="aboutUs.html">Teste2</a></li>
+          <li><a href="aboutUs.html">Sobre nós</a></li>
           <li><a href="">Nosso Contato</a></li>
         </ul>
       </header>
