--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a
             id="btnJoin"
             href="https://api.whatsapp.com/send?phone=5511978842947&text=Ol%C3%A1%2C%20gostaria%20de%20ter%20minha%20consultoria%20gr%C3%A1tis!"
-            >Quero ter minha primeira consultória grátis</a
+            >Saber sobre minha primeira consultoria grátis</a
           >
         </div>
         <div class="imgBox">
@@ -46,13 +46,13 @@
 
       <ul class="sci">
         <li>
-          <a href="#"><img src="img/facebook.png" alt="social media icon" /></a>
+          <a href="https://www.facebook.com/vecnabrasil"><img src="img/facebook.png" alt="social media icon" /></a>
         </li>
         <li>
           <a href="#"><img src="img/twitter.png" alt="social media icon" /></a>
         </li>
         <li>
-          <a href="#"
+          <a href="https://www.instagram.com/vecnabrasil/"
             ><img src="img/instagram.png" alt="social media icon"
           /></a>
         </li>
