--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="content">
         <div class="textBox">
           <h2>
-            Olá, bem vindo <br />
+            Olá, seja bem-vindo <br />
             ao <span>Vecna Brasil</span>
           </h2>
           <p>
@@ -63,13 +63,10 @@
 
       <ul class="sci">
         <li>
-          <a href="https://www.facebook.com/vecnabrasil"><img src="img/facebook.png" alt="social media icon" /></a>
+          <a href="https://www.facebook.com/vecnabrasil" target="_blank"><img src="img/facebook.png" alt="social media icon" /></a>
         </li>
         <li>
-          <a href="#"><img src="img/twitter.png" alt="social media icon" /></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/vecnabrasil/"
+          <a href="https://www.instagram.com/vecnabrasil/" target="_blank"
             ><img src="img/instagram.png" alt="social media icon"
           /></a>
         </li>
