--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a
             id="btnJoin"
             href="https://api.whatsapp.com/send?phone=5511978842947&text=Ol%C3%A1%2C%20gostaria%20de%20ter%20minha%20consultoria%20gr%C3%A1tis!"
-            >Saber sobre minha primeira consultoria grátis</a
+            >Consultoria Grátis</a
           >
         </div>
         <div class="imgBox">
