--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="content">
         <div class="textBox">
           <h2>
-            Olá, seja bem-vindo <br />
+            Olá, Bem Vindo <br />
             ao <span>Vecna Brasil</span>
           </h2>
           <p>
