--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             acreditando no sonho de todo empreendedor, acreditamos no nosso
             propósito e geramos valor por onde passamos.
           </p>
-          <a id="btnAboutMore" href="aboutUs.html">Saiba mais</a>
+          <a id="btnAboutMore" href="https://calendly.com/isaque-fdr/15">Agendar uma reunião</a>
           <a
             id="btnJoin"
             href="https://api.whatsapp.com/send?phone=5511978842947&text=Ol%C3%A1%2C%20gostaria%20de%20ter%20minha%20consultoria%20gr%C3%A1tis!"
-            >Consultoria Grátis</a
+            >Quero saber mais...</a
           >
         </div>
         <div class="imgBox">
