--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a id="btnAboutMore" href="https://calendly.com/isaque-fdr/15">Agendar uma reunião</a>
           <a
             id="btnJoin"
-            href="https://api.whatsapp.com/send?phone=5511978842947&text=Ol%C3%A1%2C%20gostaria%20de%20ter%20minha%20consultoria%20gr%C3%A1tis!"
+            href="https://api.whatsapp.com/send?phone=5511978842947&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais!"
             >Quero saber mais...</a
           >
         </div>
