--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="textBox">
           <h2>
             Olá, Bem Vindo <br />
-            a <span>Vecna Brasil</span>
+            <span>Vecna Brasil</span>
           </h2>
           <p>
             A Vecna impactou e tem o sonho de impactar milhares de negócios
