--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           >
         </div>
         <div class="imgBox">
-          <img src="img/img1.png" class="vecna" alt="" />
+          <input type="text" name="Nome" size="40" /> 
+          
         </div>
       </div>
 
