--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
           >
         </div>
         <div class="imgBox">
+          <input type="text" name="Nome" size="40" /> <br>
           <input type="text" name="Nome" size="40" /> 
+          <button>
           
         </div>
       </div>
