--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           >
         </div>
         <div class="imgBox">
-          <button>
+          <! -- AQUI VAI FICAR O VÍDEO -->
           
         </div>
       </div>
