--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-half"></i>
                     <span class="first">Dr. Marcos de Jesus</span>
-                    <span>satisfied client</span>
+                    <span>Cliente satisfeito!</span>
                 </div>
                 <div class="box">
                     <img src="images/pic-3.png">
@@ -146,7 +146,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <span class="first">Dra. Cleo Rodrigues</span>
-                    <span>satisfied client</span>
+                    <span>Cliente satisfeito!</span>
                 </div>
             </div>
         </div>
