--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h1>Redirecionando...</h1>
+    <h1>Conferindo se você não é um Robô</h1>
     <div class="loader"></div>
 
     <script>
